--- a/index.html
+++ b/index.html
@@ -1,27 +1,6 @@
 html>
   <head>
-    <style>
-      form {
-        width: 500px;
-        margin: 0 auto;
-      }
-      table {
-        width: 100%;
-        margin-top: 20px;
-        border-collapse: collapse;
-      }
-      th, td {
-        border: 1px solid black;
-        padding: 8px;
-        text-align: left;
-      }
-      th {
-        background-color: lightgray;
-      }
-      .error {
-        color: red;
-      }
-    </style>
+     <link rel="stylesheet" type="text/css" href="index.css">
   </head> 
   <h2><center>Registration Form</center></h2>
 <form id="registration-form">
@@ -72,34 +51,4 @@ html>
   <tbody>
   </tbody>
 </table>
-<script type="text/javascript">
-const form = document.getElementById('registration-form');
-const table = document.getElementById('user-table').getElementsByTagName('tbody')[0];
-
-form.addEventListener('submit', (event) => {
-  event.preventDefault();
-
-  const name = document.getElementById('name').value;
-  const email = document.getElementById('email').value;
-  const password = document.getElementById('password').value;
-  const dob = document.getElementById('dob').value;
-  const terms = document.getElementById('terms').checked;
-
-  if (terms) {
-    const row = table.insertRow();
-    const cell1 = row.insertCell(0);
-    const cell2 = row.insertCell(1);
-    const cell3 = row.insertCell(2);
-    const cell4 = row.insertCell(3);
-    const cell5 = row.insertCell(4);
-    cell1.innerHTML = name;
-    cell2.innerHTML = email;
-    cell3.innerHTML = password;
-    cell4.innerHTML = dob;
-    cell5.innerHTML = terms ? 'Yes' : 'No';
-    document.getElementById('registration-form').reset();
-  } else {
-    alert('You must accept the terms and conditions to register.');
-  }
-});
-</script>
+<script type="text/javascript" src = index.js ></script>
