--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </tr>
 
 <tr>
-  <td><label for="dob">Date of Birth:</label></td>
+  <td><label for="dob">dob:</label></td>
  <td> <input type="date" id="dob" name="dob" placeholder="Enter your date of birth" required><br></td>
 </tr>
 
@@ -37,7 +37,7 @@
   </table>
 </form>
 
-<h2><center>User Details</center></h2>
+<h2><center>Entries</center></h2>
 <table id="user-table">
   <thead>
     <tr>
