--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </tr>
 
 <tr>
- <td> <label for="terms">Accept terms and conditions</label></td>
+ <td> <label for="terms">Accept terms & conditions</label></td>
  <td> <input type="checkbox" id="terms" name="terms" required><br></td>
 </tr>
 
